# dyseos

./: .gitignore  Cargo.toml  README.md  compose.yaml
.cargo/: config.toml
.github/workflows/: docker-image.yml
docker/: Dockerfile  entrypoint.bash
src/: console.rs  lib.rs  panic.rs  print.rs  raspberrypi.x  start.rs
src/cpu/: aarch64.rs  mod.rs
src/drivers/: console.rs  mod.rs
src/sync/: mod.rs  mutex.rs  mutex_test.rs
